Multires may "forget" external .btx displacements and later overwrite them #37541

Closed
opened 2013-11-19 18:55:19 +01:00 by xxxxx xxxxx · 9 comments

System Information
Arch x64

Blender Version
Broken: Blender 2.69 r95d3286

Short description of error
In a newly opened .blend file, Multires modifiers appear to lazily load external displacement files if the viewport level is 0 or viewport visibility is disabled, then load them if those settings are changed or if sculpt mode is entered. However, if edit mode is entered on a mesh before its .btx displacements are loaded, the displacements appear to be lost when multires is next enabled, and definitely will be lost if the .blend is saved once this happens

AFAICT this does not occur with regular "packed" displacements, nor with .btx files that have been loaded prior to entering edit mode

Exact steps for others to reproduce the error

  1. start with any mesh
  2. add multires and subdivide a few times
  3. enter sculpt mode and do some sculpting
  4. exit sculpt mode
  5. use multires' Save External and save the .btx
  6. set either multires' preview level to 0, or disable its viewport visibility
  7. save and close blender
  8. reopen the .blend file.
  9. before touching multires, toggle edit mode
  10. reverse what you did for step 6
  11. displacements have not loaded. inspecting the .btx file in a hex editor implies the displacements are still intact
  12. save. inspecting the .btx file again, the displacements have been zero'd out

the attached .blend is ready to go at step 8, and has viewport visiblity for multires disabled

**System Information** Arch x64 **Blender Version** Broken: Blender 2.69 r95d3286 **Short description of error** In a newly opened .blend file, Multires modifiers appear to lazily load external displacement files if the viewport level is 0 or viewport visibility is disabled, then load them if those settings are changed or if sculpt mode is entered. However, if edit mode is entered on a mesh before its .btx displacements are loaded, the displacements appear to be lost when multires is next enabled, and definitely **will** be lost if the .blend is saved once this happens AFAICT this does not occur with regular "packed" displacements, nor with .btx files that have been loaded prior to entering edit mode **Exact steps for others to reproduce the error** 1. start with any mesh 2. add multires and subdivide a few times 3. enter sculpt mode and do some sculpting 4. exit sculpt mode 5. use multires' Save External and save the .btx 6. set either multires' preview level to 0, or disable its viewport visibility 7. save and close blender 8. reopen the .blend file. 9. before touching multires, toggle edit mode 10. reverse what you did for step 6 11. displacements have not loaded. inspecting the .btx file in a hex editor implies the displacements are still intact 12. save. inspecting the .btx file again, the displacements have been zero'd out the attached .blend is ready to go at step 8, and has viewport visiblity for multires disabled
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @zzyxz

Added subscriber: @zzyxz
Author

at least... i THINK i attached the files. there didn't seem to be any indication that it actually did anything

EDIT: apparently not... let's try this again

at least... i THINK i attached the files. there didn't seem to be any indication that it actually did anything EDIT: apparently not... let's try this again
Brecht Van Lommel self-assigned this 2013-11-22 20:34:54 +01:00

No time yet to confirm the problem but assigning to self to look into later.

No time yet to confirm the problem but assigning to self to look into later.

This issue was referenced by blender/blender-addons-contrib@5102a02b38

This issue was referenced by blender/blender-addons-contrib@5102a02b388bdf41f2a2d587980a0d9457d19d88

This issue was referenced by 5102a02b38

This issue was referenced by 5102a02b388bdf41f2a2d587980a0d9457d19d88

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5102a02b38.

Closed by commit 5102a02b38.

Fixed now, thanks for the report.

Fixed now, thanks for the report.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37541
No description provided.