Fix T37541: multires not reading external displacement file after entering edit mode.